# life

./: .project.json  .project_id  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  docs.md  task.md  weekly-plan.yml  workout.yml
.github/workflows/: inf2005.yml  label-workouts.yml  main.yml  mqt1001.yml  openai-check.yml  openai-check.yml.xx
.obsidian/: workspace.json
9210/INF2005/: config.yml
9210/MQT1001/docs/: grading.md  roadmap.md
9210/templates/cpp/: CMakeLists.txt
9210/templates/cpp/src/: main.cpp
INF2005/: README.md
INF2005/modules/module1/: notes.md
MQT1001/module-1/study-guide/: README.md
MQT1001/module-2/drills/: answers.md  drills.md
MQT1001/module-4/exam-prep/: exam-prep.md
MQT1001/modules/module4/: exercises.md
config/: repo.env
courses/INF2005/: .gitignore
ergo/cta/: srp-loop-playbook.md
ergo/keymap/: unified_keymap_live_doc.md
ergo/neuroprofile/: neuroprofile_dev_toolkit.md
knowledge/.obsidian/: workspace.json
projects/rust/: Cargo.toml
pt/workouts/: README.md
scripts/: common.sh  create_issues.sh  create_issues.sh.bak  create_labels.sh  create_milestones.sh  create_milestones.sh.bak  create_project.sh  create_project.sh.bak  create_project_views.sh  week_increment.sh  week_increment.sh.bak
seeds/: issues.csv  labels.tsv  milestones.csv  views.json
seeds/bodies/: core-seeding.md  docs-contrib.md  init-automation.md  week1.md
seeds/weeks/: week-1.md
system/: readme.md
templates/cpp/: .clang-format  .clangd
templates/scripts/: bootstrap_repo.sh
workouts/templates/: WORKOUT_LOG.md
(+81 files in other folders)
